fixed spacing

--- a/src/style.css
+++ b/src/style.css
@@ -50,6 +50,7 @@ table, td, th {
     width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
 }
 
 .booking{
@@ -71,6 +72,9 @@ table, td, th {
     color: white;
     font-family: 'DIN Alternate','serif';
     border: none;
+    display: block;
+    margin: 0 auto;
+    border-radius: 5px;
 }
 .dropbtn {
     background-color: #0288d1;
